--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,23 @@
 input.ng-invalid.ng-touched {
   border: 1px solid red;
 }
+
+.sign-up,
+.login {
+  background-color: #0079d3;
+  border-color: #0079d3;
+  color: aliceblue;
+  fill: #0079d3;
+  border: 1px solid;
+  border-radius: 4px;
+  text-align: center;
+  letter-spacing: 1px;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+  line-height: 24px;
+  text-transform: uppercase;
+  padding: 3px 16px;
+  opacity: 1;
+}
