feat: added home component, refresh token

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -2,7 +2,8 @@
   margin: 100px;
 }
 
-.login-failed {
+.login-failed,
+.register-success {
   text-align: center;
   margin: auto;
   margin-top: 10px;
