--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,14 @@
 <div class="uglyglah-body">
   <div class="container">
     <div class="row">
-      <hr />
+      <hr \ />
       <div class="col-md-9">
-        <div class="row post" *ngFor="let post of posts"></div>
+        <app-post-tile [data]="posts$"></app-post-tile>
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-md-3">
+        <app-side-bar></app-side-bar>
+        <app-subuglyglah-side-bar></app-subuglyglah-side-bar>
+      </div>
     </div>
   </div>
 </div>
