fix: home, post, vote and side bar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="uglyglah-body">
   <div class="container">
     <div class="row">
-      <hr \ />
+      <hr />
       <div class="col-md-9">
-        <app-post-tile [data]="posts$"></app-post-tile>
+        <app-post-tile></app-post-tile>
       </div>
       <div class="col-md-3">
         <app-side-bar></app-side-bar>
