--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <img
-    src="https://e7.pngegg.com/pngimages/788/957/png-clipart-graphics-font-line-google-adwords-banner-orange-google-adwords-banner.png"
+    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMfNTNe0gmJ-O_7nH8-Bq2BfhP6L8QWQMPAQ&usqp=CAU"
+    style="width: 100%; height: 40%"
   />
   <div style="text-align: center; font-size: 1em">
     Welcome to UglyGlah home page.. bla bla.. bla bla..
