--- a/src/app/shared/post-tile/post-tile.component.html
+++ b/src/app/shared/post-tile/post-tile.component.html
@@ -5,7 +5,7 @@
   <div class="col-md-11">
     <span class="uglyglah-info">
       <span class="uglyglah-text"
-        ><a class="posturl" routerLink="">{{ post.uglyglahName }}</a></span
+        ><a class="posturl" routerLink="">{{ post.subuglyglahName }}</a></span
       >
       <span>
         . Posted by
