--- a/src/app/shared/side-bar/side-bar.component.css
+++ b/src/app/shared/side-bar/side-bar.component.css
@@ -1,6 +1,6 @@
 .sidebar {
   width: 312px;
-  height: 242px;
+  height: auto;
   --post-line-color: #ccc;
   border: 1px solid #ccc;
   margin-bottom: 10px;
