--- a/src/app/shared/subuglyglah-side-bar/subuglyglah-side-bar.component.css
+++ b/src/app/shared/subuglyglah-side-bar/subuglyglah-side-bar.component.css
@@ -1,6 +1,6 @@
 .sidebar-view-subuglyglah {
   width: 312px;
-  height: 242px;
+  height: auto;
   --post-line-color: #ccc;
   border: 1px solid #ccc;
   margin-bottom: 10px;
