feat: create subuglyglah/posts form

--- a/src/app/shared/subuglyglah-side-bar/subuglyglah-side-bar.component.html
+++ b/src/app/shared/subuglyglah-side-bar/subuglyglah-side-bar.component.html
@@ -10,6 +10,6 @@
     <hr />
   </span>
   <div style="text-align: center" *ngIf="displayViewAll">
-    <a style="font-weight: bold" routerLink="/subuglyglahs">View all</a>
+    <a style="font-weight: bold" routerLink="/list-subuglyglahs">View all</a>
   </div>
 </div>
