feat: added more features

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,23 @@
       </a>
     </div>
     <div class="flex-grow-1 float-right">
-      <a routerLink="/sign-up" class="float-right sign-up mr-2">Sign up</a>
-      <a routerLink="/login" class="float-right login mr-2">Login</a>
+      <div *ngIf="isLoggedIn" ngbDropdown class="float-right">
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <button (click)="goToUserProfile()" ngbDropdownItem>Profile</button>
+          <button (click)="logout()" ngbDropdownItem>Logout</button>
+        </div>
+        <button class="userdetails" id="dropdownBasic1" ngbDropdownToggle>
+          <img
+            class="account-icon"
+            src="https://cdn4.iconfinder.com/data/icons/avatars-xmas-giveaway/128/batman_hero_avatar_comics-512.png"
+          />
+          {{ username }}
+        </button>
+      </div>
+      <div *ngIf="!isLoggedIn">
+        <a routerLink="/sign-up" class="float-right sign-up mr-2">Sign up</a>
+        <a routerLink="/login" class="float-right login mr-2">Login</a>
+      </div>
     </div>
   </nav>
 </header>
