--- a/src/app/shared/vote-button/vote-button.component.html
+++ b/src/app/shared/vote-button/vote-button.component.html
@@ -6,7 +6,7 @@
         (click)="upvotePost()"
         class="upvote"
         [icon]="faArrowUp"
-        [style.color]="upvoteColor"
+        [style.color]="post.upVote ? 'green' : ''"
       ></fa-icon>
     </div>
     <div class="p-2 votecount">{{ post.voteCount }}</div>
@@ -15,7 +15,7 @@
         (click)="downvotePost()"
         class="downvote"
         [icon]="faArrowDown"
-        [style.color]="downvoteColor"
+        [style.color]="post.downVote ? 'red' : ''"
       ></fa-icon>
     </div>
   </div>
