--- a/src/app/subuglyglah/create-subuglyglah/create-subuglyglah.component.html
+++ b/src/app/subuglyglah/create-subuglyglah/create-subuglyglah.component.html
@@ -3,7 +3,7 @@
     <div class="create-subuglyglah-container">
       <form
         class="post-form"
-        [form-group]="createSubuglyglahForm"
+        [formGroup]="createSubuglyglahForm"
         (ngSubmit)="createSubuglyglah()"
       >
         <div class="form-group">
