--- a/src/app/post/create-post/create-post.component.html
+++ b/src/app/post/create-post/create-post.component.html
@@ -61,8 +61,8 @@
       </form>
     </div>
     <div class="col-md-3">
-      <guidelines></guidelines>
-      <about></about>
+      <!--<guidelines></guidelines>
+      <about></about>-->
     </div>
   </div>
 </div>
