--- a/src/app/subuglyglah/list-subuglyglah/list-subuglyglah.component.html
+++ b/src/app/subuglyglah/list-subuglyglah/list-subuglyglah.component.html
@@ -12,7 +12,7 @@
       </ul>
     </div>
     <div class="col-md-3">
-      <app-sidebar></app-sidebar>
+      <app-side-bar></app-side-bar>
     </div>
   </div>
 </div>
